github/arc-github-webhook-ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "actions-runner-system"
  name: "actions-runner-controller-github-webhook-server"
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: "nginx"
  tls:
  - secretName: "example-domain-secret"
    hosts: ["example.domain.com"]
  rules:
    - http:
        paths:
          - path: "/actions-runner-controller-github-webhook-server"
            pathType: "Prefix"
            backend:
              service:
                name: "actions-runner-controller-github-webhook-server"
                port:
                  number: 80
